<resources>
    <string name="app_name">acim</string>
    <string-array name="menu_array">
        <item>Today\'s Lesson</item>
        <item>Text</item>
        <item>Manual for Teachers</item>
        <item>Reminders</item>
        <item>Find a Lesson</item>
        <item>Search</item>
        <item>Bookmarks</item>
        <item>I feel guided</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="menu_add_alarm">Add</string>
    <string name="menu_add_bookmark">Add Bookmark</string>
    <string name="menu_book_mark">My Bookmarks</string>
    <string name="menu_shuffle">I feel guided</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_help">Help</string>
    <string name="menu_about_us">About us</string>
    <string name="search_hint">Search Hint</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_vibrate">Vibrate</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="repeat_times">
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>
</resources>